tdf#39960 fix saving of GIF images into RTF

Currently in case of RTF export LO converts all unknown graphic into WMF. And some images due to zero prefSize
produce invalid WMF of zero dimensions.

As a workaround for current case we do not convert GIF images to WMF, PNG format looks better here. The code can
be extended to provide suitable converters for other formats.

Change-Id: I0c98111a4496250874aa4f664dd2f70134c1bdd1
Reviewed-on: https://gerrit.libreoffice.org/19581
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>